b=58002 r=dcone sr=attinasi r=rods a=asa.  Fix radio buttons to print the correct setting.